--- a/VRChat/14/1116714.html
+++ b/VRChat/14/1116714.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "HJrxuLlaxeGySpfNymdJY70gkYzIRrqMlCMUcbZGaI0="></script>
+    "9sGCYddpZW0Q4+2iU1N0HgSf9928zy1i1FjJ1ehsjbo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"テレポートエフェクトシェーダー【VRC想定】","description":"VRCでの使用を想定したテレポートエフェクトシェーダーです。\n\n\n・製作者 HhotateA\n　Twitter:@HhotateA\n　Discord:hhotatea#0333\n\n・ Released under the MIT license\n　\n・2018/11/28　配布開始 \n・2019/01/18　Cutout版追加\n\n\n## 規約\n\n・本シェーダーはUnity及びVRChatでの利用を想定しています。\n・著作権は製作者に帰属します。\n・本製品を使って発生した問題に対しては製作者は一切の責任を負いません。\n\n許可事項\n・商用を含む、配布物に付属する形での2次配布(連絡はください)\n・シェーダー単体での2次配布\n・解析・改変\n禁止事項\n・迷惑行為等\n\nPropaty\n・方向逆転\t：off\t：エフェクトのかかり始める方向を逆転させます。\n・方向\t\t\t:Y\t:パーティクル化がどの方向から始まるか選べます\n・スライダー\t\t:0\t:パーティクル化の進行度合いです。\n・テッセレーション\t:2\t:テッセレーションでパーティクルを増やします。増やしすぎると激重なので確かめながら気を付けて設定してください。\n・ビルボードサイズ\t:0.001\t:ビルボードのサイズです、小さくするほど軽くなります。\n・パーティクルサイズ\t:0.0001\t:パーティクルサイズです。\n・固定拡散\t\t:0,1,0\t:固定方向にパーティクルを拡散させます。重力などの設定に使ってください。\n・拡大拡散\t\t:1,0,1\t:オブジェクトの中心から離れるようにパーティクルを移動させます。\n・ノイズの強さ\t\t:0\t:パーティクルの移動にノイズを設定できます。\n・パーティクル範囲\t:1\t:パーティクルが完全に消えるまでの幅です。\n・スキャン線色\t\t:0,1,1\t:パーティクル化した部分にかかる色補正です。\n\n導入方法\n①Unity上で通常通りモデルを読み込む\n②マテリアルのシェーダーをHOTATE/Teleportに変更する。\n③マテリアルのプロパティから\"方向\"\"テッセレーション\"\"パーティクルサイズ\"等を設定する。\n④スライダーを1以上に直しておく。(アバターを完全に表示させる)\n⑤teleportefectのプレハブをアバター直下に置き、チェックボックスを外して非表示にしておく。\n⑥カスタムオーバーライドの設定を開いてエモートに\"login\"\"logout\"を設定する。\n\n画像にキツネツキさんの右近を使用していますが、ダウンロードファイルには付属していません。","url":"https://booth.pm/ja/items/1116714","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/4fb745c3-074a-4dd3-a297-3f01ee3312c7/i/1116714/1f4b5c24-abf0-4c36-9396-9897bc434c4d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HJrxuLlaxeGySpfNymdJY70gkYzIRrqMlCMUcbZGaI0="></script>
+    nonce="9sGCYddpZW0Q4+2iU1N0HgSf9928zy1i1FjJ1ehsjbo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -173,7 +173,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      2023
+                                      2024
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -189,7 +189,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      2023
+                                      2024
                                     </div>
                                   </div></a>
                                 </div>
@@ -524,9 +524,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
