--- a/VRChat/35/1116435.html
+++ b/VRChat/35/1116435.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "LpLQbVnrvNqVZ1ufi3yIZ/QZLQZAGT2MnjTwggPS2SA="></script>
+    "rsmLEpGZAc4I5eL6kRXtmvHjyHNqZ3/31XfUGKHXz+s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AlphaPenShader","description":"ダランディさんのアルファマップテクスチャ(https://darandy.booth.pm/items/1109858)\nが恰好よかったので、VRChatでペンに良い感じに付けるためのシェーダを作りました\nSneilMarker等に付属のマテリアルをつけてお使いください\n\nサンプルも同梱してありますが、説明下手なのであまり参考にならないかもしれません\n\n【内容物】\n・unitypackage(下記が含まれます)\n　シェーダ本体\n　サンプル\n　　プレハブ\n　　テクスチャ\n　　マテリアル\n\n説明書・説明画像\n\n改変、商用利用、アバターやワールドへの同梱可\n再配布不可","url":"https://booth.pm/ja/items/1116435","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8eae0ce3-7d8e-4436-9710-ea35a9636d4c/i/1116435/704a224c-b1ac-4661-b8d8-757a0cd56540_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LpLQbVnrvNqVZ1ufi3yIZ/QZLQZAGT2MnjTwggPS2SA="></script>
+    nonce="rsmLEpGZAc4I5eL6kRXtmvHjyHNqZ3/31XfUGKHXz+s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -357,9 +357,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
