--- a/VRChat/72/1116272.html
+++ b/VRChat/72/1116272.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "IKILnxeWHuIMjUlSRJcmm6pSOFdj0+7kgCDAqq9HYJo="></script>
+    "HwNgBDeQH5ttd1KDgqpphE0OweqT+zWnRaGNeGZWI+o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ブーツ『kurousapunks』 - over the petal　△900","description":"――　お知らせ　――\n3/13 update　軽微なポリゴンの調整を行いました。\n――――――――――\n\nシューズブランド\"over the petal\"より新作ブーツ『kurousapunks』の入荷です！\n△900なので様々なアバターに履いていただけるようになっております。\n\n3月8,9,10日に開催しておりましたバーチャルマーケット2のis3ブース展示アイテムの1つです！\n\n『暑い日も寒い日もどちらでもない日もkurousapunksで楽しくかわいくかっこよく！　今日も明日も明後日も歩くのが楽しみ！』\n\n\nデータ内には\nkurousapunks.fbx(ブーツ本体)\nkurousapunks.unitypackage\nreadme.txt\ntextureフォルダ\n　┗Albedo,Metallic,Normalテクスチャ(全て512*512)\n\nが含まれております。\n使用前にreadme.txtをお読みくださいますようお願いします。\n","url":"https://booth.pm/ja/items/1116272","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"200","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/013f360b-9e6b-4ab6-813d-0e93f9b046db/i/1116272/0751729c-6191-4a1b-a62d-d84e46dea71c_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IKILnxeWHuIMjUlSRJcmm6pSOFdj0+7kgCDAqq9HYJo="></script>
+    nonce="HwNgBDeQH5ttd1KDgqpphE0OweqT+zWnRaGNeGZWI+o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -674,9 +674,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
