--- a/VRChat/73/1115273.html
+++ b/VRChat/73/1115273.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "psG9vyfAk0zZUKBIHP9KpXA23rEyX5V3Qw+cFUezUG8="></script>
+    "kxCc78h8QYrS/IOouRUCe7b25RmpEv/JBiPRxJgKWFs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"katana　94polygon","description":"VRChat向けにポリゴン数が少ないモデルがあったらいいかなと思い、制作しました。\n\n【内容物】\n・katana.fbx\n・katana_tex.png\n・ReadMe.txt\n\n【許可】\nメッシュ、テクスチャの変更\n動画、ゲームでの個人使用\n営利目的の使用\n\n【不可】\n再配布、販売不可\n\n\n【免責事項】\nいかなる場合においても、モデルの使用によって生じた問題に対して責任を負いかねます。ご使用の際は自己責任でお願いします。\n\nカジノス工房","url":"https://booth.pm/ja/items/1115273","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/f7b53d9b-7b48-4cc4-be85-618635a7d239/i/1115273/902fdc9f-e923-435a-a047-de733f5a5336_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="psG9vyfAk0zZUKBIHP9KpXA23rEyX5V3Qw+cFUezUG8="></script>
+    nonce="kxCc78h8QYrS/IOouRUCe7b25RmpEv/JBiPRxJgKWFs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -507,9 +507,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
